--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -140,10 +140,10 @@
   "item.shape-shifter-curse.morphscale_headring": "Мимикрирующий венок",
   "item.shape-shifter-curse.morphscale_vest": "Мимикрирующий жилет",
   "item.shape-shifter-curse.morphscale_cuish": "Мимикрирующий наголенник",
-  "item.shape-shifter-curse.morphscale_anklet": "Мимикрирующий браслет на ногу",
+  "item.shape-shifter-curse.morphscale_anklet": "Мимикрирующие браслеты на ногу",
   "item.shape-shifter-curse.morphscale_armor.tooltip": "Наполненный лунной магией, этот предмет адаптируется к вашей форме.",
 
-  "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text": "Попытавшись открыть книгу, вы почувствовали присутствие в ней странной магии. На кончиках пальцев ощущается странное покалывание. Вы инстинктивно отдергиваете руку.\nКажется, будто какая-то магия пытается проникнуть в ваше тело.\nМожет быть, это проклятие? Вы точно не знаете.\nНо вы уверены в том, что дальнейшие попытки открыть книгу могут привести к непредвиденным последствиям.\n\nПримечание:\nЭто действие приведет к активации мода Shapeshifter's Curse (\"Проклятие Оборотня\")\nЭтот мод не для всех. Продолжая, вы подтверждаете, что понимаете тематику мода и его геймплейные особенности.",
+  "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text": "Попытавшись открыть книгу, вы почувствовали присутствие в ней странной магии. На кончиках пальцев ощущается странное покалывание. Вы инстинктивно отдергиваете руку.\nКажется, будто какая-то магия пытается проникнуть в ваше тело.\nМожет быть, это проклятие? Вы точно не знаете.\nНо вы уверены в том, что дальнейшие попытки открыть книгу могут привести к непредвиденным последствиям.\n\nПримечание:\nЭто действие приведет к активации мода Shapeshifter's Curse (\"Проклятие Оборотня\").\nЭтот мод не для всех. Продолжая, вы подтверждаете, что понимаете тематику мода и его геймплейные особенности.",
   "screen.shape-shifter-curse.book_of_shape_shifter.start_button_text": "Открыть книгу Оборотня",
 
   "info.shape-shifter-curse.on_enable_mod": "Как только вы открыли книгу, её магия вырвалась наружу и наполнила ваше тело!",
@@ -153,7 +153,7 @@
   "info.shape-shifter-curse.cursed_moon_forced": "Вы чувствуете, как странная сила изменила привычной ход времени. Проклятая луна взойдет следующей ночью...",
   "info.shape-shifter-curse.on_cursed_moon": "Проклятая луна взошла. Магия внутри вас сильна как никогда.",
   "info.shape-shifter-curse.on_cursed_moon_nether": "Проклятая луна взошла в другом измерении. Магия внутри вас сильна как никогда.",
-  "info.shape-shifter-curse.on_cursed_moon_special": "Странное. Проклятая луна никак не изменила вас...",
+  "info.shape-shifter-curse.on_cursed_moon_special": "Странно. Проклятая луна никак не изменила вас...",
   "info.shape-shifter-curse.on_cursed_moon_permanent": "Даже магия проклятой луны не может как-то изменить вашу форму...",
   "info.shape-shifter-curse.on_cursed_moon_before_enable": "Этой ночью луна имеет необычный цвет. Возможно, из-за её влияния монстры стали особенно активны.",
   "info.shape-shifter-curse.end_cursed_moon": "Луна заходит. Магия внутри вас ослабевает, и вы принимаете прежнюю форму.",
@@ -235,7 +235,7 @@
 
   "codex.desc.appearance_0": "Резонанс с магическими существами стал причиной изменений в вашем теле. Магия золота должна помочь вам обратить действие проклятия вспять...",
   "codex.desc.pros_0": "Ваша новая форма даёт вам особые способности...",
-  "codex.desc.cons_0": "Ваша новая форма привнесла в вашу жизнь и некоторые неудобства...",
+  "codex.desc.cons_0": "Новая форма привнесла в вашу жизнь и некоторые неудобства...",
   "codex.desc.instincts_0": "Вашу голову наполнили новые мысли...",
 
   "codex.desc.appearance_1": "Магия продолжает менять ваше тело. Вы чувствуете, как магия вашей формы пытается прийти к равновесию, совершенно отличному от старого порядка вещей.\nБудет мудрым решением воспользоваться магией золота...",
