修复#183 解决#182提出的在不同服务器使用不同颜色配置需求(现在可以通过配置auto_sync_config来控制客户端是否向服务器发送自定义配置) 修了一下俄语翻译文件中的ID错误

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -209,7 +209,7 @@
   "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "только аметист",
   "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "только сырое мясо",
   "power.origins.vegetarian.name": "вегетарианец",
-  "power.origins.form_familiar_fox_3_no_food.name": "Слабость фамильяра",
+  "power.shape-shifter-curse.form_familiar_fox_3_no_food.name": "Слабость фамильяра",
   "power.shape-shifter-curse.prevent_ranged_weapon_use.name": "Невозможно использовать дальнобойное оружие.",
   "power.shape-shifter-curse.no_shield.name": "Громоздкий",
   "power.shape-shifter-curse.no_shield.description": "Ваши лапы не могут удержать тяжёлый щит.",
@@ -477,8 +477,10 @@
   "text.autoconfig.shape-shifter-curse-custom.option.primaryColor": "Основной цвет",
   "text.autoconfig.shape-shifter-curse-custom.option.accentColor1Color": "Дополнительный цвет 1",
   "text.autoconfig.shape-shifter-curse-custom.option.accentColor2Color": "Дополнительный цвет 2",
-  "text.autoconfig.shape-shifter-curse-custom.option.eyeColor": "Цвет глаз",
+  "text.autoconfig.shape-shifter-curse-custom.option.eyeColorA": "Цвет глаз A",
+  "text.autoconfig.shape-shifter-curse-custom.option.eyeColorB": "Цвет глаз B",
   "text.autoconfig.shape-shifter-curse-custom.option.primaryGreyReverse": "Реверсировать основной цвет в чёрно-белый",
   "text.autoconfig.shape-shifter-curse-custom.option.accent1GreyReverse": "Реверсировать дополнительный цвет 1 в чёрно-белый",
-  "text.autoconfig.shape-shifter-curse-custom.option.accent2GreyReverse": "Реверсировать дополнительный цвет 2 в чёрно-белый"
+  "text.autoconfig.shape-shifter-curse-custom.option.accent2GreyReverse": "Реверсировать дополнительный цвет 2 в чёрно-белый",
+  "text.autoconfig.shape-shifter-curse-custom.option.auto_sync_config": "Auto Sync Config"
 }
