补充召唤狼灵漏掉的本地化名称，尝试解决概率生成小狼的问题

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -186,6 +186,7 @@
     "item.shape-shifter-curse.custom_ocelot_spawn_egg": "Cursed Ocelot Spawn Egg",
     "entity.shape-shifter-curse.t_wolf": "Cursed Wandering Jackal Wraith",
     "item.shape-shifter-curse.custom_wolf_spawn_egg": "Cursed Wandering Jackal Wraith Spawn Egg",
+    "entity.shape-shifter-curse.anubis_wolf_minion": "Jackal Wraith Guard",
     "effect.shape-shifter-curse.to_bat_0_effect": "...Strange bat?",
     "effect.shape-shifter-curse.to_axolotl_0_effect": "...Strange axolotl?",
     "effect.shape-shifter-curse.to_ocelot_0_effect": "...Strange ocelot?",
