--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -186,6 +186,7 @@
     "item.shape-shifter-curse.custom_ocelot_spawn_egg": "咒文豹猫刷怪蛋",
     "entity.shape-shifter-curse.t_wolf": "咒文彷徨狼灵",
     "item.shape-shifter-curse.custom_wolf_spawn_egg": "咒文彷徨狼灵刷怪蛋",
+    "entity.shape-shifter-curse.anubis_wolf_minion": "狼灵护卫",
     "effect.shape-shifter-curse.to_bat_0_effect": "...奇怪的蝙蝠?",
     "effect.shape-shifter-curse.to_axolotl_0_effect": "...奇怪的美西螈?",
     "effect.shape-shifter-curse.to_ocelot_0_effect": "...奇怪的豹猫?",
