加入塑形护甲的下界合金升级（使用下界合金碎片减少难度）

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -85,41 +85,6 @@
     "item.minecraft.lingering_potion.effect.feed_potion": "Lingering Compressed Energy Potion",
     "item.minecraft.tipped_arrow.effect.feed_potion": "Arrow of Compressed Energy",
     "effect.shape-shifter-curse.feed_effect": "Bottled high-density energy, capable of restoring satiety",
-    "item.minecraft.potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.splash_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.lingering_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.tipped_arrow.effect.to_alpha_0_potion": "ALPHA",
-    "effect.shape-shifter-curse.to_alpha_0_potion": "empty custom alpha form",
-    "item.minecraft.potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.splash_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.lingering_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.tipped_arrow.effect.to_beta_0_potion": "BETA",
-    "effect.shape-shifter-curse.to_beta_0_potion": "empty custom beta form",
-    "item.minecraft.potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.splash_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.lingering_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.tipped_arrow.effect.to_gamma_0_potion": "GAMMA",
-    "effect.shape-shifter-curse.to_gamma_0_potion": "empty custom gamma form",
-    "item.minecraft.potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.splash_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.lingering_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.tipped_arrow.effect.to_omega_sp_potion": "OMEGA",
-    "effect.shape-shifter-curse.to_omega_sp_potion": "empty custom omega special form",
-    "item.minecraft.potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.splash_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.lingering_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.tipped_arrow.effect.to_psi_sp_potion": "PSI",
-    "effect.shape-shifter-curse.to_psi_sp_potion": "empty custom psi special form",
-    "item.minecraft.potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.splash_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.lingering_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.tipped_arrow.effect.to_chi_sp_potion": "CHI",
-    "effect.shape-shifter-curse.to_chi_sp_potion": "empty custom chi special form",
-    "item.minecraft.potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.splash_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.lingering_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.tipped_arrow.effect.to_phi_sp_potion": "PHI",
-    "effect.shape-shifter-curse.to_phi_sp_potion": "empty custom phi special form",
     "item.shape-shifter-curse.cursed_book_of_shape_shifter": "Strange Book",
     "item.shape-shifter-curse.book_of_shape_shifter": "Book of the Shapeshifter",
     "item.shape-shifter-curse.book_of_shape_shifter.tooltip": "'This book's secrets are only revealed to shapeshifters'",
@@ -142,6 +107,10 @@
     "item.shape-shifter-curse.morphscale_vest": "Morphscale Vest",
     "item.shape-shifter-curse.morphscale_cuish": "Morphscale Cuish",
     "item.shape-shifter-curse.morphscale_anklet": "Morphscale Anklet",
+    "item.shape-shifter-curse.netherite_morphscale_headring": "Netherite Morphscale Headring",
+    "item.shape-shifter-curse.netherite_morphscale_vest": "Netherite Morphscale Vest",
+    "item.shape-shifter-curse.netherite_morphscale_cuish": "Netherite Morphscale Cuish",
+    "item.shape-shifter-curse.netherite_morphscale_anklet": "Netherite Morphscale Anklet",
     "item.shape-shifter-curse.morphscale_armor.tooltip": "The moon-dust magic infused in these armors automatically adapts to your form",
     "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text": "As you attempt to open the book, you feel strange magic flowing into your body through your fingertips with a faint tingling sensation, making you jerk your hand back instinctively\nCould this be some kind ofcurse? You're not sure\nHowever, you're certain that continuing to open this book will lead to unknown consequences\n\nNote:\nThis will activate the Shapeshifter's Curse mod content\nThis mod may not be a mod for everyone. Before proceeding, ensure you understand its themes and gameplay",
     "screen.shape-shifter-curse.book_of_shape_shifter.start_button_text": "Open the Book of the Shapeshifter",
@@ -196,13 +165,6 @@
     "effect.shape-shifter-curse.to_feral_cat_sp_effect": "feral catcharm...?",
     "effect.shape-shifter-curse.to_anubis_wolf_0_effect": "...Strange jackal wraith?",
     "effect.shape-shifter-curse.to_bat_0_effect.description": "You suddenly feel extremely drowsy, maybe you should sleep?",
-    "effect.shape-shifter-curse.to_alpha_0_effect": "ALPHA",
-    "effect.shape-shifter-curse.to_beta_0_effect": "BETA",
-    "effect.shape-shifter-curse.to_gamma_0_effect": "GAMMA",
-    "effect.shape-shifter-curse.to_omega_sp_effect": "OMEGA",
-    "effect.shape-shifter-curse.to_psi_sp_effect": "PSI",
-    "effect.shape-shifter-curse.to_chi_sp_effect": "CHI",
-    "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
     "power.shape-shifter-curse.form_carnivore.name": "Carnivore",
     "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "amethyst consumer",
     "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "raw meat consumer",
