--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -85,41 +85,6 @@
     "item.minecraft.lingering_potion.effect.feed_potion": "滞留型压缩能量药水",
     "item.minecraft.tipped_arrow.effect.feed_potion": "压缩能量之箭",
     "effect.shape-shifter-curse.feed_effect": "高密度的能量在瓶中流动，可以恢复饱食度",
-    "item.minecraft.potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.splash_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.lingering_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.tipped_arrow.effect.to_alpha_0_potion": "ALPHA",
-    "effect.shape-shifter-curse.to_alpha_0_potion": "empty custom alpha form",
-    "item.minecraft.potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.splash_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.lingering_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.tipped_arrow.effect.to_beta_0_potion": "BETA",
-    "effect.shape-shifter-curse.to_beta_0_potion": "empty custom beta form",
-    "item.minecraft.potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.splash_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.lingering_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.tipped_arrow.effect.to_gamma_0_potion": "GAMMA",
-    "effect.shape-shifter-curse.to_gamma_0_potion": "empty custom gamma form",
-    "item.minecraft.potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.splash_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.lingering_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.tipped_arrow.effect.to_omega_sp_potion": "OMEGA",
-    "effect.shape-shifter-curse.to_omega_sp_potion": "empty custom omega special form",
-    "item.minecraft.potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.splash_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.lingering_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.tipped_arrow.effect.to_psi_sp_potion": "PSI",
-    "effect.shape-shifter-curse.to_psi_sp_potion": "empty custom psi special form",
-    "item.minecraft.potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.splash_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.lingering_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.tipped_arrow.effect.to_chi_sp_potion": "CHI",
-    "effect.shape-shifter-curse.to_chi_sp_potion": "empty custom chi special form",
-    "item.minecraft.potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.splash_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.lingering_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.tipped_arrow.effect.to_phi_sp_potion": "PHI",
-    "effect.shape-shifter-curse.to_phi_sp_potion": "empty custom phi special form",
     "item.shape-shifter-curse.cursed_book_of_shape_shifter": "奇怪的书",
     "item.shape-shifter-curse.book_of_shape_shifter": "幻形者之书",
     "item.shape-shifter-curse.book_of_shape_shifter.tooltip": "'本书的奥秘只会向幻形者展现'",
@@ -142,6 +107,10 @@
     "item.shape-shifter-curse.morphscale_vest": "塑形身甲",
     "item.shape-shifter-curse.morphscale_cuish": "塑形绑腿",
     "item.shape-shifter-curse.morphscale_anklet": "塑形脚镯",
+    "item.shape-shifter-curse.netherite_morphscale_headring": "下界合金塑形头环",
+    "item.shape-shifter-curse.netherite_morphscale_vest": "下界合金塑形身甲",
+    "item.shape-shifter-curse.netherite_morphscale_cuish": "下界合金塑形绑腿",
+    "item.shape-shifter-curse.netherite_morphscale_anklet": "下界合金塑形脚镯",
     "item.shape-shifter-curse.morphscale_armor.tooltip": "这些护甲中融入的月尘魔法可以自动适应你的形态",
     "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text": "当你试图翻开这本书时，你感觉到伴随着一阵微弱的刺痛，从书中溢出的奇特魔法从指尖流进了你的身体，让你如同触电一般将手缩了回去\n这可能是某种诅咒么？你不知道\n不过你可以确信的是继续打开这本书会导致一些未知的后果\n\n注意：\n这会开启幻形者诅咒的模组内容\n这并不算是一个适合所有人的模组，在继续前，请确保你了解其主题与玩法",
     "screen.shape-shifter-curse.book_of_shape_shifter.start_button_text": "翻开幻形者之书",
@@ -195,13 +164,6 @@
     "effect.shape-shifter-curse.to_familiar_fox_0_effect": "女巫的奇怪药水...?",
     "effect.shape-shifter-curse.to_snow_fox_0_effect": "净化后的女巫药水...?",
     "effect.shape-shifter-curse.to_anubis_wolf_0_effect": "...奇怪的胡狼灵体?",
-    "effect.shape-shifter-curse.to_alpha_0_effect": "ALPHA",
-    "effect.shape-shifter-curse.to_beta_0_effect": "BETA",
-    "effect.shape-shifter-curse.to_gamma_0_effect": "GAMMA",
-    "effect.shape-shifter-curse.to_omega_sp_effect": "OMEGA",
-    "effect.shape-shifter-curse.to_psi_sp_effect": "PSI",
-    "effect.shape-shifter-curse.to_chi_sp_effect": "CHI",
-    "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
     "effect.shape-shifter-curse.to_bat_0_effect.description": "你突然感到很困倦，也许你应该去睡一觉?",
     "commands.shape-shifter-curse.form_not_found": "未找到指定的形态！",
     "power.shape-shifter-curse.form_carnivore.name": "肉食者",
