Finally 自定义形态药水完工 现在可以使用NBT来创建其他形态的药水

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -196,6 +196,12 @@
     "effect.shape-shifter-curse.to_feral_cat_sp_effect": "feral catcharm...?",
     "effect.shape-shifter-curse.to_anubis_wolf_0_effect": "...Strange jackal wraith?",
     "effect.shape-shifter-curse.to_bat_0_effect.description": "You suddenly feel extremely drowsy, maybe you should sleep?",
+    "item.minecraft.potion.effect.to_custom_statue_potion": "Custom Form Curse Potion",
+    "item.minecraft.splash_potion.effect.to_custom_statue_potion": "Splash Custom Form Curse Potion",
+    "item.minecraft.lingering_potion.effect.to_custom_statue_potion": "Lingering Custom Form Curse Potion",
+    "item.minecraft.tipped_arrow.effect.to_custom_statue_potion": "Arrow of Custom Form Curse",
+    "effect.shape-shifter-curse.to_custom_statue_potion": "",
+    "effect.shape-shifter-curse.to_custom_statue_effect": "...Strange Potion?",
     "effect.shape-shifter-curse.to_alpha_0_effect": "ALPHA",
     "effect.shape-shifter-curse.to_beta_0_effect": "BETA",
     "effect.shape-shifter-curse.to_gamma_0_effect": "GAMMA",
