添加新的创造模式物品页

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -380,5 +380,6 @@
     "item.minecraft.tipped_arrow.effect.to_custom_statue_potion": "Arrow of Custom Form Curse",
     "effect.shape-shifter-curse.to_custom_statue_potion": "",
     "effect.shape-shifter-curse.to_custom_statue_effect": "...Strange Potion?",
-    "tooltip.shape_shifter_curse.morphscale_item": "MorphScaled Item"
+    "tooltip.shape_shifter_curse.morphscale_item": "MorphScaled Item",
+    "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse"
 }
