--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -169,7 +169,7 @@
     "item.minecraft.splash_potion.effect.to_custom_statue_potion": "Splash Custom Form Curse Potion",
     "item.minecraft.lingering_potion.effect.to_custom_statue_potion": "Lingering Custom Form Curse Potion",
     "item.minecraft.tipped_arrow.effect.to_custom_statue_potion": "Arrow of Custom Form Curse",
-    "effect.shape-shifter-curse.to_custom_statue_potion": "",
+    "effect.shape-shifter-curse.to_custom_statue_potion": "Custom Form Curse",
     "effect.shape-shifter-curse.to_custom_statue_effect": "...Strange Potion?",
     "power.shape-shifter-curse.form_carnivore.name": "Carnivore",
     "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "amethyst consumer",
@@ -343,6 +343,7 @@
     "codex.form.shape-shifter-curse.feral_cat_sp.cons": "Meow...Meowor？",
     "codex.form.shape-shifter-curse.feral_cat_sp.instincts": "Meow....",
     "tooltip.shape_shifter_curse.morphscale_item": "MorphScaled Item",
+    "tooltip.shape_shifter_curse.potion_target_form": "Target Form: ",
     "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
     "text.shape-shifter-curse.config.title": "Shape Shifter Curse Config Menu",
     "text.shape-shifter-curse.config.close": "Cancel",
