--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -382,5 +382,7 @@
     "effect.shape-shifter-curse.to_custom_statue_effect": "...Strange Potion?",
     "tooltip.shape_shifter_curse.morphscale_item": "MorphScaled Item",
     "tooltip.shape_shifter_curse.potion_target_form": "Target Form: ",
-    "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse"
+    "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
+    "category.shape-shifter-curse":"Shape Shifter Curse",
+    "key.shape-shifter-curse.make_sound":"Make Sound"
 }
