添加启用形态随机叫声选项 受伤和特殊叫声不受影响

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -384,5 +384,6 @@
     "tooltip.shape_shifter_curse.potion_target_form": "Target Form: ",
     "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
     "category.shape-shifter-curse":"Shape Shifter Curse",
-    "key.shape-shifter-curse.make_sound":"Make Sound"
+    "key.shape-shifter-curse.make_sound":"Make Sound",
+    "text.autoconfig.shape-shifter-curse-custom.option.enable_form_random_sound": "Enable Form Random Sound"
 }
