--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -387,6 +387,13 @@
     "text.autoconfig.shape-shifter-curse-client.option.ignoreNoRenderArmPower": "Ignore NoRenderArm Power",
     "text.autoconfig.shape-shifter-curse-client.category.InDevelopment": "In Development",
     "text.autoconfig.shape-shifter-curse-client.option.newStartBookForBiggerScreen": "Make The New Version of Start Book Interface Bigger",
+    "text.autoconfig.shape-shifter-curse-client.category.UI": "UI",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosType": "Instinct Bar Middle Position Type",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetX": "Instinct Bar Position X Offset",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetY": "Instinct Bar Position Y Offset",
+    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosType": "FamiliarFox ManaBar Middle Position Type",
+    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetX": "FamiliarFox ManaBar Position X Offset",
+    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetY": "FamiliarFox ManaBar Position Y Offset",
     "text.autoconfig.shape-shifter-curse-common.title": "Shape Shifter Curse - Common Config",
     "text.autoconfig.shape-shifter-curse-common.category.General": "General",
     "text.autoconfig.shape-shifter-curse-common.option.transformativeBatSpawnChance": "Transformative Bat Spawn Success Rate",
