NBT自定义饰品完工

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -385,6 +385,7 @@
     "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
     "category.shape-shifter-curse": "Shape Shifter Curse",
     "key.shape-shifter-curse.make_sound": "Make Sound",
+    "item.shape-shifter-curse.custom_trinket": "Custom Trinket",
     "text.autoconfig.shape-shifter-curse-custom.option.enable_form_random_sound": "Enable Form Random Sound",
     "text.autoconfig.shape-shifter-curse-client.category.UI": "UI",
     "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosType": "Instinct Bar Middle Position Type",
