--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -379,6 +379,7 @@
     "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
     "category.shape-shifter-curse": "Shape Shifter Curse",
     "key.shape-shifter-curse.make_sound": "Make Sound",
+    "item.shape-shifter-curse.custom_trinket": "Custom Trinket",
     "text.shape-shifter-curse.config.title": "Shape Shifter Curse Config Menu",
     "text.shape-shifter-curse.config.close": "Cancel",
     "text.autoconfig.shape-shifter-curse-client.title": "Shape Shifter Curse - Client Config",
